-
Bug
-
Resolution: Fixed
-
P2
-
9, 10, 11
-
Windows 10 version 1709
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8205261 | 11.0.1 | Sergey Bylokhov | P2 | Resolved | Fixed | team |
Before you run it, move your mouse to a corner of the screen.
Note that any number of Robot-based tests will also fail in the same way.
This seems to be a bug introduced by Microsoft in Windows 10 in the mouse_move function.
I note that FX robot also fails similarly.
- backported by
-
JDK-8205261 AWT Robot mouseMove fails on Windows 10 1709 with HiDPI
-
- Resolved
-
- duplicates
-
JDK-8196826 java.awt.Robot does not move mouse pointer to the specified position
-
- Closed
-
-
JDK-8204315 awt/Robot/HiDPIMouseClick/HiDPIRobotMouseClick.java: Wrong mouse click point!
-
- Closed
-
-
JDK-8041463 Mouse speed is reset to default
-
- Closed
-
-
JDK-8158798 [hidpi] java/awt/MouseInfo/GetPointerInfoTest.java, JContainerMousePositionTest.java fail on Windows
-
- Closed
-
-
JDK-8186063 Robot.mouseMove doesn't work first try on scaled 175% 4K screen
-
- Closed
-
-
JDK-8190898 java.awt.Robot.mouseMove fails in the lastest Windows 10 Build 1709 on high resolution
-
- Closed
-
- relates to
-
JDK-8196031 FX Robot mouseMove fails on Windows 10 1709 with HiDPI
-
- Resolved
-
-
JDK-4288230 Robot does not work on the windows multiScreen environment
-
- Closed
-
-
JDK-8190898 java.awt.Robot.mouseMove fails in the lastest Windows 10 Build 1709 on high resolution
-
- Closed
-
-
JDK-8230660 Java 8 - AWT Robot mouseMove fails on Windows 10 1709
-
- Open
-