8196030: AWT Robot mouseMove fails on Windows 10 1709 with HiDPI 8190326: Robot.mouseMove uses scaling factor of main display on unscaled second display

Reviewed-by: prr, kcr