src/java.desktop/share/classes/sun/swing/SwingUtilities2.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -52,6 +52,7 @@ import javax.swing.table.TableColumnModel;
 import javax.swing.tree.TreeModel;
 import javax.swing.tree.TreePath;
 
+import sun.java2d.pipe.Region;
 import sun.print.ProxyPrintGraphics;
 import sun.awt.*;
 import java.io.*;
@@ -2238,35 +2239,6 @@ public class SwingUtilities2 {
         }
 
         return UIManager.getBoolean(key);
-    }
-
-    /**
-     *
-     * Returns the graphics configuration which bounds contain the given
-     * point
-     *
-     * @param current the default configuration which is checked in the first place
-     * @param x the x coordinate of the given point
-     * @param y the y coordinate of the given point
-     * @return the graphics configuration
-     */
-    public static GraphicsConfiguration getGraphicsConfigurationAtPoint(GraphicsConfiguration current, double x, double y) {
-
-        if (current.getBounds().contains(x, y)) {
-            return current;
-        }
-
-        GraphicsEnvironment env = GraphicsEnvironment.getLocalGraphicsEnvironment();
-        GraphicsDevice[] devices = env.getScreenDevices();
-
-        for (GraphicsDevice device : devices) {
-            GraphicsConfiguration config = device.getDefaultConfiguration();
-            if (config.getBounds().contains(x, y)) {
-                return config;
-            }
-        }
-
-        return current;
     }
 
     /**
